add bugzilla link to all bug detail pages

--- a/src/app/bug-details/bug-details.component.html
+++ b/src/app/bug-details/bug-details.component.html
@@ -38,6 +38,13 @@
           </div>
         </div>
       </div>
+      <div class="space"></div>
+      <div class="addition-params addition-params-bugzilla-link" matRipple matTooltip="[NEW TAB] {{bugzillaLink}}">
+        <a [href]="bugzillaLink" target="_blank" style="height: 100%;">
+          <div class="bugzilla-image">
+          </div>
+        </a>
+      </div>
     </div>
     <mat-divider></mat-divider>
     <div class="comment">
