rename field because it is original name of function

--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="search-field-block">
         <mat-form-field appearance="fill" class="search-field">
-          <mat-label>Filter</mat-label>
+          <mat-label>Quick search</mat-label>
           <input matInput type="search" [(ngModel)]="quicksearch" autocomplete="off">
           <button mat-button *ngIf="quicksearch" matSuffix mat-icon-button aria-label="Clear" (click)="quicksearch=''">
             <mat-icon>close</mat-icon>
