delete unused search button and change routing

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -16,9 +16,9 @@
 
 
 <div class="main-page">
-  <router-outlet></router-outlet>
+  <!-- <router-outlet></router-outlet> -->
+  <app-search-page></app-search-page>
 </div>
-<button mat-button routerLink='/search'>Search</button>
 
 <mat-menu #appMenu="matMenu">
   <button (click)="logout()" mat-menu-item>Logout</button>
