--- a/src/app/bug-details/bug-details.component.html
+++ b/src/app/bug-details/bug-details.component.html
@@ -47,7 +47,17 @@
       </div>
     </div>
     <mat-divider></mat-divider>
-    <div class="comment">
+    <div class="comment main-comment">
+      <div class="attachment" *ngIf="bug.comments[0].attachment_id as id">
+        <mat-progress-bar mode="query" *ngIf="attachmentLoading[id]"></mat-progress-bar>
+        <div [ngClass]="{'attachment_space_for_loading': !attachmentLoading[id]}">
+          <button mat-icon-button matTooltip="Download {{bug.comments[0].attachment_name}}"
+            (click)="download_attachment(id)">
+            <mat-icon>attachment</mat-icon>
+          </button>
+          {{bug.comments[0].attachment_name}}
+        </div>
+      </div>
       <span class="comment-text">
         {{bug.comments[0]?.text}}
       </span>
@@ -58,20 +68,28 @@
 <mat-card *ngFor="let comment of (bug$ | async)?.comments | slice:1" class="result comment mat-elevation-z2">
   <div class="left-block-comment">
     <div class="creator-image" *ngIf="(users$ | async)[comment.creator_username] as user">
-      <img class="avatar-image" matTooltip={{user.real_name}}
-        [src]="user.avatar || '/assets/avatars/default.jpg'">
+      <img class="avatar-image" matTooltip={{user.real_name}} [src]="user.avatar || '/assets/avatars/default.jpg'">
     </div>
   </div>
   <div class="right-block-comment">
     <div class="comment-date">
       {{comment.creation_time | date : 'd MMMM y, HH:mm'}}
     </div>
-    <div class="comment-text">
+    <div class="attachment" *ngIf="comment.attachment_id">
+      <mat-progress-bar mode="query" *ngIf="attachmentLoading[comment.attachment_id]"></mat-progress-bar>
+      <div [ngClass]="{'attachment_space_for_loading': !attachmentLoading[comment.attachment_id]}">
+        <button mat-icon-button matTooltip="Download {{comment.attachment_name}}"
+          [disabled]="this.attachmentLoading[comment.attachment_id]"
+          (click)="download_attachment(comment.attachment_id)">
+          <mat-icon>attachment</mat-icon>
+        </button>
+        <div class="attachment-name">{{comment.attachment_name}}</div>
+      </div>
+    </div>
+    <div class="comment-text" *ngIf="comment.text">
       {{comment.text}}
     </div>
   </div>
-
-
 </mat-card>
 
 
