--- a/src/app/bug-details/bug-details.component.scss
+++ b/src/app/bug-details/bug-details.component.scss
@@ -24,17 +24,17 @@
   white-space: pre-wrap;
   word-break: break-word;
 }
-.comment {
-  padding-top: 1em;
-}
+
 .addition-params-icon {
   margin: auto;
   padding-right: 1em;
 }
+
 .addition-params-data {
   flex: 1;
   margin: auto;
 }
+
 .addition-params-space {
   display: flex;
   justify-content: flex-start;
@@ -59,31 +59,56 @@
   padding: 0;
   display: flex;
 }
+.main-comment {
+  flex-direction: column;
+}
+
 .left-block-comment {
   background-color: #e2e2e2;
 }
+
 .right-block-comment {
   flex: 1;
   display: block;
 }
+
 .comment-date {
   font-size: 0.8em;
   float: right;
   margin: 0.3em;
 }
+
 .comment-text {
   margin: 0.5em;
 }
+
 .bugzilla-image {
   width: 4em;
   height: 4em;
   background-image: url(/assets/images/bugzilla.jpeg);
   background-size: cover;
 }
+
 .space {
  flex: 1;
 }
+
 .addition-params-bugzilla-link {
   cursor: pointer;
 }
-
+.loading-attachment {
+  display: inline-block;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+  margin-top: 0.5em;
+}
+.attachment-name {
+  display: inline-block;
+}
+.attachment {
+  display: flex;
+  flex-direction: column;
+}
+.attachment_space_for_loading {
+  padding-top: 4px;
+}
