--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -11,7 +11,7 @@
       <div class="search-field-block">
         <mat-form-field appearance="fill" class="search-field">
           <mat-label>Quick search</mat-label>
-          <input matInput type="search" [(ngModel)]="quicksearch" autocomplete="off">
+          <input matInput type="search" [(ngModel)]="quicksearch" autocomplete="off" (keydown.enter)="search()">
           <button mat-button *ngIf="quicksearch" matSuffix mat-icon-button aria-label="Clear" (click)="quicksearch=''">
             <mat-icon>close</mat-icon>
           </button>
