Add quick search filtering

--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -122,11 +122,10 @@
   <ng-container *ngIf="!loading">
     <div class="result-list" *ngIf="(bugs$ | async) as bugs">
       <div *ngIf="bugs.length == 0"><h1>No bugs found. Try adjusting search parameters</h1></div>
-
       <cdk-virtual-scroll-viewport [itemSize]="50" class="result-list-view">
         <mat-card (click)="get_details(bug)" [ngClass]="{'mat-elevation-z10': (bugDetail$ | async)?.id == bug.id}"
           [ngStyle]="{'border-left': '0.3em solid ' + products[bug.product].color}" routerLinkActive="active"
-          class="result-item" *cdkVirtualFor="let bug of bugs">
+          class="result-item" *cdkVirtualFor="let bug of bugs| quicksearch: quicksearch: currentCount$;  let l = count">
           <mat-icon class="bug-severity" matTooltip={{bug.severity}} aria-hidden="false"
             [ngStyle]="{'color': severities[bug.severity]?.color, 'margin': 'auto'}">
             {{severities[bug.severity]?.isFeature?"insights":"bug_report"}}</mat-icon>
