--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -12,10 +12,12 @@
         <mat-form-field appearance="fill" class="search-field">
           <mat-label>Quick search</mat-label>
           <input matInput type="search" [formControl]="quickFilterControl" autocomplete="off" (keydown.enter)="search()">
-          <button mat-button *ngIf="quicksearch" matSuffix mat-icon-button aria-label="Clear" (click)="quicksearch=''">
+          <button mat-button *ngIf="quickFilterControl.value" matSuffix mat-icon-button (click)="quickFilterControl.reset()">
             <mat-icon>close</mat-icon>
           </button>
-          <mat-hint align="end" *ngIf="(bugs$ | async) && !loading" style="font-size: 1.2em;">All results count: <span><b>{{(bugs$ | async)?.length}}</b></span></mat-hint>
+          <mat-hint align="end" *ngIf="(bugs$ | async) && !loading" style="font-size: 1.2em;">
+            All results count: <span><b>{{(bugs$ | async)?.length}}</b></span>
+          </mat-hint>
         </mat-form-field>
       </div>
     </div>
