--- a/src/app/main-page/app-main-page-dialog-settings.html
+++ b/src/app/main-page/app-main-page-dialog-settings.html
@@ -1,8 +1,15 @@
 <h1 mat-dialog-title>Settings</h1>
 <div mat-dialog-content class="dialog-content" *ngIf="(settings.settingsData$ | async) as settingsData">
-  <mat-slide-toggle [checked]="settingsData.comment_and_creator"
-   (change)="comment_and_creator_change($event)"
-   matTooltip="Enables searching by bug and comment creators">
-    Creator and Commentator
-  </mat-slide-toggle>
+  <div class="setting-element">
+    <mat-slide-toggle [checked]="settingsData.comment_and_creator" (change)="comment_and_creator_change($event)"
+      matTooltip="Enables searching by bug and comment creators">
+      Creator and Commentator
+    </mat-slide-toggle>
+  </div>
+  <div class="setting-element">
+    <mat-slide-toggle [checked]="settingsData.autoload_images" (change)="autoload_images_change($event)"
+      matTooltip="Enables downloading all images in attachments in comments and show it inline in comment">
+      Enable auloloading all attachment images
+    </mat-slide-toggle>
+  </div>
 </div>
