--- a/src/app/search-page/search-page.component.scss
+++ b/src/app/search-page/search-page.component.scss
@@ -2,7 +2,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  padding-top: 1em;
   overflow: hidden;
 }
 .product-select-block {
@@ -23,9 +22,9 @@
 
 }
 
-.filter-item, .product-filter {
-  padding-top: 8px;
-  padding-bottom: 8px;
+.filter-item {
+  padding-top: 5px;
+  padding-bottom: 5px;
   margin-right: 3px;
   cursor: pointer;
   user-select: none;
@@ -40,7 +39,7 @@
 }
 
 .search-field-block {
-  padding-top: 1em;
+  padding-top: 0.2em;
   display: grid;
 }
 
